# backlog-manager-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  conftest.py  note.md  pyproject.toml  setup.py
specs/: backlog-manager.md
src/backlog_manager/: main.py  utils.py
tests/: test_backlog_manager.py
